# RiseDock

./: .gitignore  .tauri-signing-key  .tauri-signing-key.bak2  .tauri-signing-key.pub  .tauri-updater-key.pub  .tauri-updater-key2.pub  LICENSE  README.md  build.cmd  check_actions.py  check_jobs.py  check_logs.py  gitee.yml  index.html  oss_upload_stderr.txt  package-lock.json  package.json  release_notes_v1.1.27.md  secret_result.txt  tailwind.config.js  update_secret.py
.gitee/pipelines/: gitee-go.yml
.gitee/workflows/: release.yml
.github/workflows/: publish.yml  release.yml
docs/: 使用指南.md  开发路线图.md
scripts/: generate-ico.cjs  generate-icons.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: icon.rs  launcher.rs  license.rs  mod.rs  storage.rs
src-tauri/src/crypto/: license_key.rs  machine_code.rs  mod.rs
src-tauri/src/models/: mod.rs
src/components/: AboutModal.tsx  ConfirmDialog.tsx  ContextMenu.tsx  EmptyState.tsx  HelpModal.tsx  HotkeyModal.tsx  LaunchItemRow.tsx  LicenseModal.tsx  SceneDashboard.tsx  SceneEditor.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  SortableItem.tsx  Toast.tsx  TopMenuBar.tsx  UpdateModal.tsx
src/services/: database.ts
src/stores/: index.ts
src/styles/: global.css  globals.css
src/types/: index.ts
