[package]
name = "risedock"
version = "1.1.27"
description = "RiseDock - Scene-based Workspace Launcher"
authors = ["RiseDock"]
edition = "2021"

[lib]
name = "risedock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
hex = "0.4"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.31"
open = "5.2"
tauri-plugin-autostart = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_Shell",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
